# tvet

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
tests/: test_horizons.py
tests/c/: test_bounding_box.c  test_intersect_AB_t.c  test_shadowing.c  test_vector_math.c
tvet/: __init__.py  _tvet.c  cli.py  conversions.py  core.py  damit.py  ephemerides.py  formatting.py  horizons.py  io.py  lightcurve.py  shapemodel.py  spin.py  vectors.py
tvet/c/: bounding_box.c  bounding_box.h  intersect_AB_t.c  intersect_AB_t.h  shadowing.c  shadowing.h  test_intersect_AB_t.c  test_vector_math.c  vector_math.c  vector_math.h
tvet/c/tests/: test_bounding_box.c  test_shadowing.c
tvet/csrc/: bounding_box.c  intersect_AB_t.c  intersect_AB_t.h  shadowing.c  shadowing.h  vector_math.c  vector_math.h
tvet/csrc/tests/: test_intersect_AB_t.c  test_vector_math.c
