[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvet"
version = "1.0.0"
description = "Asteroid shape / lightcurve tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "vispy", "matplotlib", "requests", "glfw"]

[tool.setuptools]
packages = ["tvet"]

[project.scripts]
tvet = "tvet.cli:main"